--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -52,8 +52,9 @@
       }
 
       .linkDiv {
-        margin: 20px;
-        font-size: 2em;
+        margin: 20px 0;
+        font-size: 1.5em;
+        white-space: nowrap;
         text-align: center;
       }
     }
