--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -19,6 +19,13 @@
   .linkDiv {
     a {
       border-bottom: 2px dashed theme-color("primary");
+      text-decoration: none;
+    }
+
+    &:hover {
+      a {
+        border-bottom: 2px solid theme-color("primary");
+      }
     }
   }
 
