--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -4,6 +4,14 @@
   // General Styles
   margin-top: 30px;
 
+  @media (min-width: 768px) {
+    .imgContainer {
+      display: flex;
+      align-items: center;
+      height: 100%;
+    }
+  }
+
   img {
     width: 100%;
     max-width: 250px;
