--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -2,7 +2,8 @@
 
 .bio {
   // General Styles
-  margin-top: 30px;
+  // margin: 50px 0;
+  padding: 50px 0 25px 0;
 
   @media (min-width: 768px) {
     .imgContainer {
@@ -19,7 +20,7 @@
   }
 
   .bio_text {
-    background-color: darken(theme-color("dark"), 2%);
+    background-color: darken(theme-color("dark"), 5%);
     border-radius: 5px;
     padding: 10px;
   }
@@ -47,7 +48,7 @@
 
       .linkDiv {
         font-size: 1.5em;
-        margin: 10px;
+        margin: 10px 0;
       }
     }
   }
