--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -2,7 +2,6 @@
 
 .bio {
     // General Styles
-    // margin: 50px 0;
     padding: 50px 0 0 0;
 
     @media (min-width: 768px) {
@@ -27,8 +26,10 @@
 
     .linkDiv {
         a {
-            border-bottom: 2px dashed theme-color('primary');
             text-decoration: none;
+            svg {
+                width: 1em;
+            }
         }
 
         &:hover {
