--- a/src/components/Bio/styles.scss
+++ b/src/components/Bio/styles.scss
@@ -1,7 +1,12 @@
 @import 'src/BS.scss';
 
 .bio {
-    padding: 50px 0 0 0;
+    padding-top: 50px;
+
+    .bioGrid {
+        column-gap: 10px;
+        row-gap: 10px;
+    }
 
     h1 {
         grid-area: h;
